# apicurio-serdes

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PREMISE.md  README.md  SECURITY.md  TECHNICAL_DEBT.md  apicurio-serdes-intent.md  mkdocs.yml  pyproject.toml  sonar-project.properties  tessl.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  scorecard.yml  security.yml  sign-release-retroactive.yml  sonarcloud.yml
.specify/: active-feature  context.json  score-history.json
docs/: changelog.en.md  changelog.fr.md  index.en.md  index.fr.md  index.md
docs/api-reference/: index.fr.md  index.md
docs/concepts/: addressing-model.en.md  addressing-model.fr.md  schema-caching.en.md  schema-caching.fr.md  wire-format.en.md  wire-format.fr.md
docs/decisions/: 001-base-class-over-mixin-for-client-dedup.md  002-no-async-serializer.md  003-frozen-dataclass-for-cached-schema.md  004-double-checked-locking-for-cache-dedup.md  005-validate-32bit-for-confluent-wire-format.md  006-align-deserializer-default-to-globalid.md  007-closed-client-guard-pattern.md  008-int64-range-validation-on-registry-response.md  009-no-lock-on-deserializer-parsed-cache.md  010-keep-schema-not-found-error-dual-constructor.md  011-no-cache-eviction.md  012-keep-explicit-cause-on-deserialization-error.md  013-no-additional-top-level-exports.md  014-no-timeout-retry-configuration.md  015-no-api-path-abstraction.md  016-keep-alpha-classifier.md  017-no-integration-tests-against-real-registry.md  018-keep-ci-yaml-structure-tests.md  019-accept-gil-dependency-for-thread-safety-tests.md  020-retry-with-exponential-backoff.md  021-lru-ttl-cache-eviction.md
docs/getting-started/: installation.en.md  installation.fr.md  quickstart.en.md  quickstart.fr.md
docs/how-to/: authentication.en.md  authentication.fr.md  custom-serialization.en.md  custom-serialization.fr.md  error-handling.en.md  error-handling.fr.md  identifier-selection.en.md  identifier-selection.fr.md
docs/migration/: from-confluent-kafka.en.md  from-confluent-kafka.fr.md
docs/plans/: 2026-03-13-artifact-resolver-plan.md  2026-03-13-auth-plan.md  2026-03-13-auth-research.md  2026-03-16-auto-register-plan.md  2026-03-16-subject-strategies-plan.md  2026-03-16-subject-strategies-research.md  2026-03-19-cache-ttl-plan.md  2026-03-19-cache-ttl-research.md
docs/setup/: ci-cd-secrets.fr.md  ci-cd-secrets.md
docs/user-guide/: async-client.fr.md  async-client.md  avro-deserializer.en.md  avro-deserializer.fr.md  avro-serializer.en.md  avro-serializer.fr.md  ci-cd.fr.md  ci-cd.md  deserialization.md  deserializer.md  kafka-headers-wire-format.fr.md  kafka-headers-wire-format.md
specs/001-avro-serializer/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-avro-deserializer/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  (+3 more)
tests/: conftest.py  test_async_client.py  test_async_client_bdd.py  test_async_deserializer.py  test_auth.py  test_cache_core.py  test_client.py  test_deserializer.py  test_errors.py  test_serialization.py  test_serializer.py  test_strategies.py  test_wire_format.py
(+150 files in other folders)
